--- a/basic_clone/popup.html
+++ b/basic_clone/popup.html
@@ -9,10 +9,25 @@
         font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial,
           sans-serif;
         margin: 12px;
+        width: 300px;
+        background: #f8f9fa;
       }
       button {
-        padding: 6px 10px;
+        padding: 8px 12px;
         margin: 4px 0;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        background: #fff;
+        cursor: pointer;
+        font-size: 14px;
+        transition: all 0.2s ease;
+      }
+      button:hover {
+        background: #f0f0f0;
+        border-color: #ccc;
+      }
+      button:active {
+        background: #e0e0e0;
       }
       .row {
         display: flex;
@@ -22,23 +37,61 @@
       }
       small {
         color: #666;
+        font-size: 12px;
+        line-height: 1.4;
       }
       hr {
-        margin: 12px 0;
+        margin: 16px 0;
         border: none;
         border-top: 1px solid #ddd;
       }
       select {
-        padding: 4px 8px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
+        padding: 6px 10px;
+        border-radius: 6px;
+        border: 1px solid #ddd;
+        background: #fff;
+        font-size: 14px;
+        flex: 1;
       }
       .status {
         background: #e8f5e8;
-        padding: 8px;
-        border-radius: 4px;
+        padding: 10px;
+        border-radius: 6px;
+        margin: 8px 0;
+        font-size: 13px;
+        border-left: 4px solid #4caf50;
+      }
+      .status.error {
+        background: #ffebee;
+        border-left-color: #f44336;
+      }
+      .status.info {
+        background: #e3f2fd;
+        border-left-color: #2196f3;
+      }
+      .device-info {
+        background: #fff;
+        padding: 10px;
+        border-radius: 6px;
+        border: 1px solid #ddd;
         margin: 8px 0;
         font-size: 12px;
+      }
+      .device-info strong {
+        color: #333;
+      }
+      .toggle-button {
+        width: 100%;
+        padding: 10px;
+        font-weight: 500;
+      }
+      .toggle-button.active {
+        background: #4caf50;
+        color: white;
+        border-color: #4caf50;
+      }
+      .toggle-button.active:hover {
+        background: #45a049;
       }
     </style>
   </head>
@@ -53,17 +106,21 @@
       </select>
     </div>
 
-    <div class="row">
-      <button id="toggle-simulator">Toggle Device Simulator</button>
+    <div class="device-info">
+      <strong>Current Device:</strong> <span id="current-device">iPhone 15 Pro</span><br>
+      <strong>Viewport:</strong> <span id="current-viewport">369×750</span>
     </div>
 
     <hr />
 
-    <div class="row">
-      <button id="toggle-scrollbar">Show/Hide Scrollbar</button>
-    </div>
+    <button id="toggle-simulator" class="toggle-button">Toggle Device Simulator</button>
+    <small>Device simulator shows the page in a realistic device mockup with proper styling</small>
 
-    <small>Device simulator shows the page in a realistic device mockup</small>
+    <hr />
+
+    <button id="toggle-scrollbar" class="toggle-button">Show/Hide Scrollbar</button>
+    <small>Control scrollbar visibility on the current page</small>
+
     <script src="popup.js"></script>
   </body>
 </html>
