hiding the scrollbars

--- a/basic_clone/popup.html
+++ b/basic_clone/popup.html
@@ -142,7 +142,7 @@
 
       <hr />
 
-      <button id="toggle-scrollbar" class="toggle-button">Show/Hide Scrollbar</button>
+      <button id="toggle-scrollbar" class="toggle-button">Show Scrollbar</button>
       <small>Control scrollbar visibility on the current page (scrollbars are hidden by default)</small>
     </div>
 
