changing devices working

--- a/basic_clone/popup.html
+++ b/basic_clone/popup.html
@@ -129,8 +129,8 @@
       <div class="row">
         <label for="device">Device:</label>
         <select id="device">
-          <option value="iphone-15-pro">iPhone 15 Pro</option>
-          <option value="macbook-pro">MacBook Pro</option>
+          <option value="ip15pro">iPhone 15 Pro</option>
+          <option value="macbookpro">MacBook Pro</option>
         </select>
       </div>
 
@@ -145,6 +145,8 @@
       <button id="toggle-scrollbar" class="toggle-button">Show Scrollbar</button>
       <small>Control scrollbar visibility on the current page (scrollbars are hidden by default)</small>
     </div>
+
+
 
     <script src="popup.js"></script>
   </body>
