--- a/basic_clone/popup.html
+++ b/basic_clone/popup.html
@@ -4,116 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mobile Clone</title>
-    <style>
-      body {
-        font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial,
-          sans-serif;
-        margin: 12px;
-        width: 300px;
-        background: #f8f9fa;
-      }
-      button {
-        padding: 8px 12px;
-        margin: 4px 0;
-        border: 1px solid #ddd;
-        border-radius: 6px;
-        background: #fff;
-        cursor: pointer;
-        font-size: 14px;
-        transition: all 0.2s ease;
-      }
-      button:hover {
-        background: #f0f0f0;
-        border-color: #ccc;
-      }
-      button:active {
-        background: #e0e0e0;
-      }
-      .row {
-        display: flex;
-        gap: 8px;
-        align-items: center;
-        margin: 8px 0;
-      }
-      small {
-        color: #666;
-        font-size: 12px;
-        line-height: 1.4;
-      }
-      hr {
-        margin: 16px 0;
-        border: none;
-        border-top: 1px solid #ddd;
-      }
-      select {
-        padding: 6px 10px;
-        border-radius: 6px;
-        border: 1px solid #ddd;
-        background: #fff;
-        font-size: 14px;
-        flex: 1;
-      }
-      .status {
-        background: #e8f5e8;
-        padding: 10px;
-        border-radius: 6px;
-        margin: 8px 0;
-        font-size: 13px;
-        border-left: 4px solid #4caf50;
-      }
-      .status.error {
-        background: #ffebee;
-        border-left-color: #f44336;
-      }
-      .status.info {
-        background: #e3f2fd;
-        border-left-color: #2196f3;
-      }
-      .status.loading {
-        background: #fff3e0;
-        border-left-color: #ff9800;
-      }
-      .device-info {
-        background: #fff;
-        padding: 10px;
-        border-radius: 6px;
-        border: 1px solid #ddd;
-        margin: 8px 0;
-        font-size: 12px;
-      }
-      .device-info strong {
-        color: #333;
-      }
-      .toggle-button {
-        width: 100%;
-        padding: 10px;
-        font-weight: 500;
-      }
-      .toggle-button.active {
-        background: #4caf50;
-        color: white;
-        border-color: #4caf50;
-      }
-      .toggle-button.active:hover {
-        background: #45a049;
-      }
-      .loading-spinner {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        border: 2px solid #ff9800;
-        border-radius: 50%;
-        border-top-color: transparent;
-        animation: spin 1s ease-in-out infinite;
-        margin-right: 8px;
-      }
-      @keyframes spin {
-        to { transform: rotate(360deg); }
-      }
-      .hidden {
-        display: none;
-      }
-    </style>
   </head>
   <body>
     <div id="loading-section">
@@ -123,30 +13,16 @@
       </div>
     </div>
 
-    <div id="main-section" class="hidden">
-      <div class="status">✅ Device simulator automatically enabled</div>
+    
 
-      <div class="row">
-        <label for="device">Device:</label>
-        <select id="device">
-          <option value="ip15pro">iPhone 15 Pro</option>
-          <option value="macbookpro">MacBook Pro</option>
-        </select>
-      </div>
-
-      <div class="device-info">
-        <strong>Current Device:</strong> <span id="current-device">iPhone 15 Pro</span><br>
-        <strong>Viewport:</strong> <span id="current-viewport">440×956</span><br>
-        <strong>Status:</strong> <span id="simulator-status">Simulator Active</span>
-      </div>
-
-      <hr />
-
-      <button id="toggle-scrollbar" class="toggle-button">Show Scrollbar</button>
-      <small>Control scrollbar visibility on the current page (scrollbars are hidden by default)</small>
+      <button id="toggle-scrollbar" class="toggle-button">
+        Show Scrollbar
+      </button>
+      <small>
+        Control scrollbar visibility on the current page (scrollbars are hidden
+        by default)
+      </small>
     </div>
-
-
 
     <script src="popup.js"></script>
   </body>
