--- a/react-clone/src/offscreen/recording.html
+++ b/react-clone/src/offscreen/recording.html
@@ -1,53 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>Screen Recording</title>
     <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            background: #f5f5f5;
-        }
-        .recording-controls {
-            text-align: center;
-        }
-        .record-btn {
-            background: #ff4444;
-            color: white;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            font-size: 16px;
-            cursor: pointer;
-            margin: 10px;
-        }
-        .record-btn.recording {
-            background: #44ff44;
-        }
-        .status {
-            margin: 20px 0;
-            padding: 10px;
-            border-radius: 6px;
-            background: #e0e0e0;
-        }
-        .timer {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-        }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        background: #f5f5f5;
+      }
+      .recording-controls {
+        text-align: center;
+      }
+      .record-btn {
+        background: #ff4444;
+        color: white;
+        border: none;
+        padding: 12px 24px;
+        border-radius: 8px;
+        font-size: 16px;
+        cursor: pointer;
+        margin: 10px;
+      }
+      .record-btn.recording {
+        background: #44ff44;
+      }
+      .status {
+        margin: 20px 0;
+        padding: 10px;
+        border-radius: 6px;
+        background: #e0e0e0;
+      }
+      .timer {
+        font-size: 24px;
+        font-weight: bold;
+        color: #333;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="recording-controls">
-        <h2>Screen Recording</h2>
-        <button id="recordBtn" class="record-btn">Start Recording</button>
-        <div class="status">
-            <div id="statusText">Ready to record</div>
-            <div id="timer" class="timer">00:00</div>
-        </div>
+      <h2>Screen Recording</h2>
+      <button id="recordBtn" class="record-btn">Start Recording</button>
+      <div class="status">
+        <div id="statusText">Ready to record</div>
+        <div id="timer" class="timer">00:00</div>
+      </div>
     </div>
     <script src="recording.js"></script>
-</body>
+  </body>
 </html>
